2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/grantpt.c: Use <> brackets for not-cancel.h.

2012-01-29  Chris Metcalf  <cmetcalf@tilera.com>

	* scripts/config.guess: Update from upstream config git repository.
	* scripts/config.sub: Likewise.

2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>

	* elf/elf.h (EM_TILEPRO, EM_TILEGX): New macros.
	(EM_NUM): Update.
	(R_TILEPRO_*, R_TILEGX_*): New macros.

2012-06-24  Carlos O'Donell  <carlos@systemhalted.org>

	* scripts/list-sources.sh: Scan PORTS for translations.
	* po/libc.pot: Regenerated.

2012-06-13  Carlos O'Donell  <carlos_odonell@mentor.com>

	* po/Makefile (libc.pot): Use UTF-8 charset.

2012-06-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14273]
	* sysdeps/ieee754/dbl-64/wordsize-64/e_cosh.c (__ieee754_cosh):
	Clear sign bit of 64-bit integer value before comparing against
	overflow value.

	[BZ #14167]
	* aclocal.m4 (LIBC_TRY_CC_OPTION): New macro.
	* configure: Regenerated.
	* sysdeps/ia64/configure: Likewise.
	* sysdeps/mach/configure: Likewise.
	* sysdeps/mach/hurd/configure: Likewise.

2012-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c: Fix for wrong ldbl128-ibm
	fmodl commit.

2012-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c (__ieee754_fmodl): Fix
	subnormal exponent extraction and add some __builtin_expect.
	* sysdeps/ieee754/ldbl-128ibm/math_ldbl.h (ldbl_extract_mantissa):
	Fix for subnormal mantissa calculation.

2012-06-01  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14048]
	* sysdeps/ieee754/dbl-64/wordsize-64/e_fmod.c (__ieee754_fmod):
	Use int64_t for variable i.

2012-05-17  Andreas Jaeger  <aj@suse.de>
	    Carlos O'Donell  <carlos_odonell@mentor.com>

	[BZ #14059]
	* sysdeps/x86_64/multiarch/init-arch.h
	(bit_YMM_Usable): Rename to...
	(bit_AVX_Usable): ... this.
	(bit_FMA4_Usable): New macro.
	(bit_XMM_state): New macro.