@@ -1,0 +1,6 @@
+#ifndef _SYS_EPOLL_H
+#include_next <sys/epoll.h>
+
+libc_hidden_proto (epoll_pwait)
+
+#endif
