@@ -1,4 +1,4 @@
-/* Copyright (C) 2007 Free Software Foundation, Inc.
+/* Copyright (C) 2007, 2011, 2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -67,3 +67,5 @@ stub_warning (epoll_pwait)
 
 # include <stub-tag.h>
 #endif
+
+libc_hidden_def (epoll_pwait)
