@@ -1,5 +1,11 @@
 2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>
 
+	* include/sys/epoll.h: New file.
+	* sysdeps/unix/sysv/linux/epoll_pwait.c (epoll_pwait): Mark as
+	libc_hidden_def.
+
+2012-01-28  Chris Metcalf  <cmetcalf@tilera.com>
+
 	* sysdeps/unix/sysv/linux/grantpt.c: Use <> brackets for not-cancel.h.
 
 2012-01-29  Chris Metcalf  <cmetcalf@tilera.com>
